create github pages

--- a/ourstory.html
+++ b/ourstory.html
@@ -49,7 +49,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
                     </div>
                 </li>
                 
-                <li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-white display-4" data-toggle="dropdown-submenu" aria-expanded="true">We Create</a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="boost-landing-page-conversions-with-exclusive-videos.html">Landing Page Videos</a><div class="dropdown"><a class="dropdown-item text-white dropdown-toggle display-4" aria-expanded="false" data-toggle="dropdown-submenu">Branded Videos</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item text-white display-4" href="exclusive-brand-video-maketing-for-any-budget.html" aria-expanded="false">Startup Business Videos</a><a class="dropdown-item text-white display-4" href="Best+Reasons+Why+Ecommerce+Retailers+Need+Exclusive+Video+Marketing+Services.html" aria-expanded="false">Top Business Videos</a></div></div><a class="dropdown-item text-white display-4" href="superior-video-marketing-subscription-service.html" aria-expanded="false">Video Subscriptions</a></div></li>
+                <li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-white display-4" data-toggle="dropdown-submenu" aria-expanded="true">We Create</a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="boost-landing-page-conversions-with-exclusive-videos.html">Landing Page Videos</a><div class="dropdown open"><a class="dropdown-item text-white dropdown-toggle display-4" aria-expanded="true" data-toggle="dropdown-submenu">Branded Videos</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item text-white display-4" href="video-for-startups.html" aria-expanded="false">Startup Business Videos</a><a class="dropdown-item text-white display-4" href="Best+Reasons+Why+Ecommerce+Retailers+Need+Exclusive+Video+Marketing+Services.html" aria-expanded="false">Top Business Videos</a></div></div><a class="dropdown-item text-white display-4" href="superior-video-marketing-subscription-service.html" aria-expanded="false">Video Subscriptions</a></div></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="ourstory.html">
                         About Us
@@ -111,7 +111,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
                     </div>
                 </li>
                 
-                <li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-white display-4" data-toggle="dropdown-submenu" aria-expanded="true">We Create</a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="boost-landing-page-conversions-with-exclusive-videos.html">Landing Page Videos</a><div class="dropdown"><a class="dropdown-item text-white dropdown-toggle display-4" aria-expanded="false" data-toggle="dropdown-submenu">Branded Videos</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item text-white display-4" href="exclusive-brand-video-maketing-for-any-budget.html" aria-expanded="false">Startup Business Videos</a><a class="dropdown-item text-white display-4" href="Best+Reasons+Why+Ecommerce+Retailers+Need+Exclusive+Video+Marketing+Services.html" aria-expanded="false">Top Business Videos</a></div></div><a class="dropdown-item text-white display-4" href="superior-video-marketing-subscription-service.html" aria-expanded="false">Video Subscriptions</a></div></li>
+                <li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-white display-4" data-toggle="dropdown-submenu" aria-expanded="true">We Create</a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="boost-landing-page-conversions-with-exclusive-videos.html">Landing Page Videos</a><div class="dropdown open"><a class="dropdown-item text-white dropdown-toggle display-4" aria-expanded="true" data-toggle="dropdown-submenu">Branded Videos</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item text-white display-4" href="video-for-startups.html" aria-expanded="false">Startup Business Videos</a><a class="dropdown-item text-white display-4" href="Best+Reasons+Why+Ecommerce+Retailers+Need+Exclusive+Video+Marketing+Services.html" aria-expanded="false">Top Business Videos</a></div></div><a class="dropdown-item text-white display-4" href="superior-video-marketing-subscription-service.html" aria-expanded="false">Video Subscriptions</a></div></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="ourstory.html">
                         About Us
@@ -342,17 +342,17 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
         <div class="mbr-row mbr-justify-content-center">            
             <div class="amp-accordion mbr-col-sm-12 mbr-col-md-10 mbr-col-lg-8 mbr-col-xl-8 align-left">
                 <div class="accordion-item">
-                    <h2 tabindex="0" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item1131.toggleVisibility,amp-accordion-item2131.hide,amp-accordion-item3131.hide,amp-accordion-item4131.hide,amp-accordion-item5131.hide,amp-accordion-item6131.hide">HONESTY&nbsp;</h2>
-                    <div class="accordion-item-body" id="amp-accordion-item1131">
+                    <h2 tabindex="0" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item1130.toggleVisibility,amp-accordion-item2130.hide,amp-accordion-item3130.hide,amp-accordion-item4130.hide,amp-accordion-item5130.hide,amp-accordion-item6130.hide">HONESTY&nbsp;</h2>
+                    <div class="accordion-item-body" id="amp-accordion-item1130">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             We will answer all questions with a truthful answer within the scope of our experience.</p>
                     </div>
                 </div>
 
                 <div class="accordion-item">
-                    <h2 tabindex="1" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item1131.hide,amp-accordion-item2131.toggleVisibility,amp-accordion-item3131.hide,amp-accordion-item4131.hide,amp-accordion-item5131.hide,amp-accordion-item6131.hide">
+                    <h2 tabindex="1" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item1130.hide,amp-accordion-item2130.toggleVisibility,amp-accordion-item3130.hide,amp-accordion-item4130.hide,amp-accordion-item5130.hide,amp-accordion-item6130.hide">
                         INTEGRITY</h2>
-                    <div class="accordion-item-body" hidden="" id="amp-accordion-item2131">
+                    <div class="accordion-item-body" hidden="" id="amp-accordion-item2130">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             Our services depend on the trust and effectiveness of our communications. &nbsp;We strive for openess and transparency in our dealings with clients. We will communicate regularly with the client and report on our activities completely
 and truthfully.</p>
@@ -360,35 +360,35 @@ and truthfully.</p>
                 </div>
 
                 <div class="accordion-item">
-                    <h2 tabindex="2" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item1131.hide,amp-accordion-item2131.hide,amp-accordion-item3131.toggleVisibility,amp-accordion-item4131.hide,amp-accordion-item5131.hide,amp-accordion-item6131.hide">
+                    <h2 tabindex="2" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item1130.hide,amp-accordion-item2130.hide,amp-accordion-item3130.toggleVisibility,amp-accordion-item4130.hide,amp-accordion-item5130.hide,amp-accordion-item6130.hide">
                         SERVICE</h2>
-                    <div class="accordion-item-body" hidden="" id="amp-accordion-item3131">
+                    <div class="accordion-item-body" hidden="" id="amp-accordion-item3130">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             We approach all projects and clients realizing that we provide a service. Our objective is to provide the best service and guidance within our experience.</p>
                     </div>
                 </div>
 
                 <div class="accordion-item">
-                    <h2 tabindex="3" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item1131.hide,amp-accordion-item2131.hide,amp-accordion-item3131.hide,amp-accordion-item4131.toggleVisibility,amp-accordion-item5131.hide,amp-accordion-item6131.hide">TEAM PLAYER</h2>
-                    <div class="accordion-item-body" hidden="" id="amp-accordion-item4131">
+                    <h2 tabindex="3" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item1130.hide,amp-accordion-item2130.hide,amp-accordion-item3130.hide,amp-accordion-item4130.toggleVisibility,amp-accordion-item5130.hide,amp-accordion-item6130.hide">TEAM PLAYER</h2>
+                    <div class="accordion-item-body" hidden="" id="amp-accordion-item4130">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             Our relationship with the client is as a member of the team. We wear many hats during the relationship and our focus is on the success of the client.</p>
                     </div>
                 </div>
 
                 <div class="accordion-item">
-                    <h2 tabindex="4" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item1131.hide,amp-accordion-item2131.hide,amp-accordion-item3131.hide,amp-accordion-item4131.hide,amp-accordion-item5131.toggleVisibility,amp-accordion-item6131.hide">
+                    <h2 tabindex="4" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item1130.hide,amp-accordion-item2130.hide,amp-accordion-item3130.hide,amp-accordion-item4130.hide,amp-accordion-item5130.toggleVisibility,amp-accordion-item6130.hide">
                         MASTERY</h2>
-                    <div class="accordion-item-body" hidden="" id="amp-accordion-item5131">
+                    <div class="accordion-item-body" hidden="" id="amp-accordion-item5130">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             We strive to master our knowledge and develop intuitively. We are constantly researching and learning looking for new ways to apply our skills.</p>
                     </div>
                 </div>
 
                 <div class="accordion-item">
-                    <h2 tabindex="5" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item1131.hide,amp-accordion-item2131.hide,amp-accordion-item3131.hide,amp-accordion-item4131.hide,amp-accordion-item5131.hide,amp-accordion-item6131.toggleVisibility">
+                    <h2 tabindex="5" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item1130.hide,amp-accordion-item2130.hide,amp-accordion-item3130.hide,amp-accordion-item4130.hide,amp-accordion-item5130.hide,amp-accordion-item6130.toggleVisibility">
                         LEADERSHIP</h2>
-                    <div class="accordion-item-body" hidden="" id="amp-accordion-item6131">
+                    <div class="accordion-item-body" hidden="" id="amp-accordion-item6130">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             We are constantly looking for the shortest distance to accomplish your goals. Simplicity is the key but it does not mean simplication.</p>
                     </div>
