--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
   <script async  src="https://cdn.ampproject.org/v0.js"></script>
   <script async custom-element="amp-position-observer" src="https://cdn.ampproject.org/v0/amp-position-observer-0.1.js"></script>
   <script async custom-element="amp-animation" src="https://cdn.ampproject.org/v0/amp-animation-0.1.js"></script>
-  <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
-  <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
   <script async custom-element="amp-lightbox" src="https://cdn.ampproject.org/v0/amp-lightbox-0.1.js"></script>
   <script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
   <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
   <script async custom-element="amp-facebook-comments" src="https://cdn.ampproject.org/v0/amp-facebook-comments-0.1.js"></script>
+  <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
+  <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
   
   <link rel="alternate" href="https://seriodesignfx.com"  hreflang="en" />
 <link rel="alternate" href="https://seriodesignfx.com"  hreflang="en-us" />
@@ -181,7 +181,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
             <div class="card col-12 mbr-col-md-6 mbr-col-lg-4 first-row-card">
                 <div class="card-row">
                     <div class="card-img align-center">
-                        <span class="amp-iconfont fa-video-camera fa"><svg width="43" height="43" viewBox="0 0 1792 1792" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><path d="M1792 352v1088q0 42-39 59-13 5-25 5-27 0-45-19l-403-403v166q0 119-84.5 203.5t-203.5 84.5h-704q-119 0-203.5-84.5t-84.5-203.5v-704q0-119 84.5-203.5t203.5-84.5h704q119 0 203.5 84.5t84.5 203.5v165l403-402q18-19 45-19 12 0 25 5 39 17 39 59z"></path></svg></span>
+                        <span class="amp-iconfont mobi-mbri-video mobi-mbri"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="43" height="43"><path d="M23 4.9l-6 5V5H1v14h16v-4.9l6 5V4.9zM15 17H3V7h12v10zm6-2.1L17.6 12 21 9.1v5.8z"></path></svg></span>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style align-center display-5">Create</h4>
@@ -207,7 +207,10 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
             <div class="card col-12 mbr-col-md-6 mbr-col-lg-4 last-child">
                 <div class="card-row">
                     <div class="card-img align-center">
-                        <span class="amp-iconfont fa-handshake-o fa"><svg width="43" height="43" viewBox="0 0 2304 1792" xmlns="http://www.w3.org/2000/svg" fill="currentColor"><path d="M192 1152q40 0 56-32t0-64-56-32-56 32 0 64 56 32zm1473-58q-10-13-38.5-50t-41.5-54-38-49-42.5-53-40.5-47-45-49l-125 140q-83 94-208.5 92t-205.5-98q-57-69-56.5-158t58.5-157l177-206q-22-11-51-16.5t-47.5-6-56.5.5-49 1q-92 0-158 66l-158 158h-155v544q5 0 21-.5t22 0 19.5 2 20.5 4.5 17.5 8.5 18.5 13.5l297 292q115 111 227 111 78 0 125-47 57 20 112.5-8t72.5-85q74 6 127-44 20-18 36-45.5t14-50.5q10 10 43 10 43 0 77-21t49.5-53 12-71.5-30.5-73.5zm159 58h96v-512h-93l-157-180q-66-76-169-76h-167q-89 0-146 67l-209 243q-28 33-28 75t27 75q43 51 110 52t111-49l193-218q25-23 53.5-21.5t47 27 8.5 56.5q16 19 56 63t60 68q29 36 82.5 105.5t64.5 84.5q52 66 60 140zm288 0q40 0 56-32t0-64-56-32-56 32 0 64 56 32zm192-576v640q0 26-19 45t-45 19h-434q-27 65-82 106.5t-125 51.5q-33 48-80.5 81.5t-102.5 45.5q-42 53-104.5 81.5t-128.5 24.5q-60 34-126 39.5t-127.5-14-117-53.5-103.5-81l-287-282h-358q-26 0-45-19t-19-45v-672q0-26 19-45t45-19h421q14-14 47-48t47.5-48 44-40 50.5-37.5 51-25.5 62-19.5 68-5.5h117q99 0 181 56 82-56 181-56h167q35 0 67 6t56.5 14.5 51.5 26.5 44.5 31 43 39.5 39 42 41 48 41.5 48.5h355q26 0 45 19t19 45z"></path></svg></span>
+                        <span class="amp-iconfont mbri-cash"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="43" height="43" viewBox="0 0 32 32" fill="currentColor">
+<title>mbri-cash</title>
+<path d="M7.333 5.333c-0.451-0.006-0.667 0.33-0.667 0.667s0.216 0.673 0.667 0.667h22.667c0.381 0 0.667 0.286 0.667 0.667v13.333c-0.006 0.451 0.33 0.667 0.667 0.667s0.673-0.216 0.667-0.667v-13.333c0-1.096-0.904-2-2-2zM4.667 8c-0.451-0.006-0.667 0.33-0.667 0.667s0.216 0.673 0.667 0.667h22.667c0.381 0 0.667 0.286 0.667 0.667v13.333c-0.006 0.451 0.33 0.667 0.667 0.667s0.673-0.216 0.667-0.667v-13.333c0-1.096-0.904-2-2-2zM2 10.667c-1.096 0-2 0.904-2 2v13.333c0 1.096 0.904 2 2 2h22.667c1.096 0 2-0.904 2-2v-13.333c0-1.096-0.904-2-2-2zM2 12h22.667c0.381 0 0.667 0.286 0.667 0.667v13.333c0 0.381-0.286 0.667-0.667 0.667h-22.667c-0.381 0-0.667-0.286-0.667-0.667v-13.333c0-0.381 0.286-0.667 0.667-0.667zM3.333 13.333c-0.368 0-0.667 0.299-0.667 0.667v2.667c-0.006 0.451 0.33 0.667 0.667 0.667s0.673-0.216 0.667-0.667v-2h2c0.451 0.006 0.667-0.33 0.667-0.667s-0.216-0.673-0.667-0.667zM12.667 13.333c-3.306 0-6 2.694-6 6s2.694 6 6 6c3.306 0 6-2.694 6-6s-2.694-6-6-6zM20.667 14.667h2v2c-0.006 0.451 0.33 0.667 0.667 0.667s0.673-0.216 0.667-0.667v-2.667c-0-0.368-0.299-0.667-0.667-0.667h-2.667c-0.464 0-0.667 0.279-0.667 0.667s0.182 0.667 0.667 0.667zM12.667 14.667c2.585 0 4.667 2.081 4.667 4.667s-2.081 4.667-4.667 4.667c-2.585 0-4.667-2.081-4.667-4.667s2.081-4.667 4.667-4.667zM12.667 16c-1.094 0-2 0.906-2 2s0.906 2 2 2c0.373 0 0.667 0.283 0.667 0.667s-0.294 0.667-0.667 0.667h-1.333c-0.451-0.006-0.667 0.33-0.667 0.667s0.216 0.673 0.667 0.667h1.333c1.094 0 2-0.906 2-2s-0.906-2-2-2c-0.373 0-0.667-0.283-0.667-0.667s0.294-0.667 0.667-0.667h1.333c0.451 0.006 0.667-0.33 0.667-0.667s-0.216-0.673-0.667-0.667zM3.333 21.333c-0.376-0.006-0.673 0.29-0.667 0.667v2.667c0 0.368 0.298 0.667 0.667 0.667h2.667c0.451 0.006 0.667-0.33 0.667-0.667s-0.216-0.673-0.667-0.667h-2v-2c0.006-0.368-0.298-0.661-0.667-0.667zM23.333 21.333c-0.368 0.006-0.672 0.298-0.667 0.667v2h-2c-0.451-0.006-0.667 0.33-0.667 0.667s0.216 0.673 0.667 0.667h2.667c0.368-0 0.667-0.299 0.667-0.667v-2.667c0.006-0.376-0.29-0.673-0.667-0.667z"></path>
+</svg></span>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style align-center display-5">
@@ -677,7 +680,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
     </div>
 </section>
 
-<amp-animation layout="nodisplay" trigger="visibility" class="cid-qXUiZmdUy6" id="header7-1" data-rv-view="1902">
+<amp-animation layout="nodisplay" trigger="visibility" class="cid-qXUiZmdUy6" id="header7-1" data-rv-view="2546">
     <script type="application/json">
     {
         "--width": "calc(0px - width('.animated-text'))",
