--- a/contact-serio-design-fx-best-video-social-media.html
+++ b/contact-serio-design-fx-best-video-social-media.html
@@ -48,7 +48,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
                     </div>
                 </li>
                 
-                <li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-white display-4" data-toggle="dropdown-submenu" aria-expanded="true">We Create</a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="boost-landing-page-conversions-with-exclusive-videos.html">Landing Page Videos</a><div class="dropdown open"><a class="dropdown-item text-white dropdown-toggle display-4" aria-expanded="true" data-toggle="dropdown-submenu">Branded Videos</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item text-white display-4" href="video-for-startups.html" aria-expanded="false">Startup Business Videos</a><a class="dropdown-item text-white display-4" href="Best+Reasons+Why+Ecommerce+Retailers+Need+Exclusive+Video+Marketing+Services.html" aria-expanded="false">Top Business Videos</a></div></div><a class="dropdown-item text-white display-4" href="superior-video-marketing-subscription-service.html" aria-expanded="false">Video Subscriptions</a></div></li>
+                <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-white display-4" data-toggle="dropdown-submenu" aria-expanded="false">We Create</a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="boost-landing-page-conversions-with-exclusive-videos.html">Landing Page Videos</a><div class="dropdown"><a class="dropdown-item text-white dropdown-toggle display-4" aria-expanded="false" data-toggle="dropdown-submenu">Branded Videos</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item text-white display-4" href="video-for-startups.html" aria-expanded="false">Startup Business Videos</a><a class="dropdown-item text-white display-4" href="Best+Reasons+Why+Ecommerce+Retailers+Need+Exclusive+Video+Marketing+Services.html" aria-expanded="false">Top Business Videos</a></div></div><a class="dropdown-item text-white display-4" href="superior-video-marketing-subscription-service.html" aria-expanded="false">Video Subscriptions</a></div></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="ourstory.html">
                         About Us
@@ -110,7 +110,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
                     </div>
                 </li>
                 
-                <li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-white display-4" data-toggle="dropdown-submenu" aria-expanded="true">We Create</a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="boost-landing-page-conversions-with-exclusive-videos.html">Landing Page Videos</a><div class="dropdown open"><a class="dropdown-item text-white dropdown-toggle display-4" aria-expanded="true" data-toggle="dropdown-submenu">Branded Videos</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item text-white display-4" href="video-for-startups.html" aria-expanded="false">Startup Business Videos</a><a class="dropdown-item text-white display-4" href="Best+Reasons+Why+Ecommerce+Retailers+Need+Exclusive+Video+Marketing+Services.html" aria-expanded="false">Top Business Videos</a></div></div><a class="dropdown-item text-white display-4" href="superior-video-marketing-subscription-service.html" aria-expanded="false">Video Subscriptions</a></div></li>
+                <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-white display-4" data-toggle="dropdown-submenu" aria-expanded="false">We Create</a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="boost-landing-page-conversions-with-exclusive-videos.html">Landing Page Videos</a><div class="dropdown"><a class="dropdown-item text-white dropdown-toggle display-4" aria-expanded="false" data-toggle="dropdown-submenu">Branded Videos</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item text-white display-4" href="video-for-startups.html" aria-expanded="false">Startup Business Videos</a><a class="dropdown-item text-white display-4" href="Best+Reasons+Why+Ecommerce+Retailers+Need+Exclusive+Video+Marketing+Services.html" aria-expanded="false">Top Business Videos</a></div></div><a class="dropdown-item text-white display-4" href="superior-video-marketing-subscription-service.html" aria-expanded="false">Video Subscriptions</a></div></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="ourstory.html">
                         About Us
@@ -133,7 +133,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
 
 </section>
 
-<amp-animation layout="nodisplay" trigger="visibility" class="cid-qY0HL4x6OJ" id="header7-8" data-rv-view="2508">
+<amp-animation layout="nodisplay" trigger="visibility" class="cid-qY0HL4x6OJ" id="header7-8" data-rv-view="6908">
     <script type="application/json">
     {
         "--width": "calc(0px - width('.animated-text'))",
@@ -170,7 +170,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
 
         <div class="mbr-row mbr-justify-content-center">
             <div class="mbr-col-sm-12 mbr-col-md-10 mbr-col-lg-6" data-form-type="formoid">
-                <form class="mbr-form" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7775RIMIKRm4jwESqFnE40uB3Ou/hHxNmGMBG3Lvu16mdmXbZKvcX+C1+mUb4ZYLn1buvAJrsoi9MA4Ma3KIgLu6nd/lMlMLLT38MwEcs2ciRycp7U1jOBi2bYKQqnFF">
+                <form class="mbr-form" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="n9PIwZsIR9PQCVm9AZgoYr+4ZB4SZkSnQ9Vb8nq7nXxc5gP+Ml/JC6T12RlaRSzlfjspFqv2zvmTLtZUARF3KCij6Av0dWbs9oNb74a5O7TJksXh19iXHxLtC34oBZyp">
                     <div submit-success="">
                         <template data-form-alert="" type="amp-mustache">Email sent successfully!</template>
                     </div>
