--- a/ourstory.html
+++ b/ourstory.html
@@ -95,7 +95,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
                   <a href="index.html#header6-2"></a>
               </amp-img>
           </span>
-          <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html#header6-2">Helping You Grow Sales</a></span>
+          <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html#header6-2">Let Video Get Results</a></span>
       </div>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
@@ -287,17 +287,17 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
         <div class="mbr-row mbr-justify-content-center">            
             <div class="amp-accordion mbr-col-sm-12 mbr-col-md-10 mbr-col-lg-8 mbr-col-xl-8 align-left">
                 <div class="accordion-item">
-                    <h2 tabindex="0" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item145.toggleVisibility,amp-accordion-item245.hide,amp-accordion-item345.hide,amp-accordion-item445.hide,amp-accordion-item545.hide,amp-accordion-item645.hide">HONESTY&nbsp;</h2>
-                    <div class="accordion-item-body" id="amp-accordion-item145">
+                    <h2 tabindex="0" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item1130.toggleVisibility,amp-accordion-item2130.hide,amp-accordion-item3130.hide,amp-accordion-item4130.hide,amp-accordion-item5130.hide,amp-accordion-item6130.hide">HONESTY&nbsp;</h2>
+                    <div class="accordion-item-body" id="amp-accordion-item1130">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             We will answer all questions with a truthful answer within the scope of our experience.</p>
                     </div>
                 </div>
 
                 <div class="accordion-item">
-                    <h2 tabindex="1" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item145.hide,amp-accordion-item245.toggleVisibility,amp-accordion-item345.hide,amp-accordion-item445.hide,amp-accordion-item545.hide,amp-accordion-item645.hide">
+                    <h2 tabindex="1" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item1130.hide,amp-accordion-item2130.toggleVisibility,amp-accordion-item3130.hide,amp-accordion-item4130.hide,amp-accordion-item5130.hide,amp-accordion-item6130.hide">
                         INTEGRITY</h2>
-                    <div class="accordion-item-body" hidden="" id="amp-accordion-item245">
+                    <div class="accordion-item-body" hidden="" id="amp-accordion-item2130">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             Our services depend on the trust and effectiveness of our communications. &nbsp;We strive for openess and transparency in our dealings with clients. We will communicate regularly with the client and report on our activities completely
 and truthfully.</p>
@@ -305,35 +305,35 @@ and truthfully.</p>
                 </div>
 
                 <div class="accordion-item">
-                    <h2 tabindex="2" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item145.hide,amp-accordion-item245.hide,amp-accordion-item345.toggleVisibility,amp-accordion-item445.hide,amp-accordion-item545.hide,amp-accordion-item645.hide">
+                    <h2 tabindex="2" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item1130.hide,amp-accordion-item2130.hide,amp-accordion-item3130.toggleVisibility,amp-accordion-item4130.hide,amp-accordion-item5130.hide,amp-accordion-item6130.hide">
                         SERVICE</h2>
-                    <div class="accordion-item-body" hidden="" id="amp-accordion-item345">
+                    <div class="accordion-item-body" hidden="" id="amp-accordion-item3130">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             We approach all projects and clients realizing that we provide a service. Our objective is to provide the best service and guidance within our experience.</p>
                     </div>
                 </div>
 
                 <div class="accordion-item">
-                    <h2 tabindex="3" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item145.hide,amp-accordion-item245.hide,amp-accordion-item345.hide,amp-accordion-item445.toggleVisibility,amp-accordion-item545.hide,amp-accordion-item645.hide">TEAM PLAYER</h2>
-                    <div class="accordion-item-body" hidden="" id="amp-accordion-item445">
+                    <h2 tabindex="3" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item1130.hide,amp-accordion-item2130.hide,amp-accordion-item3130.hide,amp-accordion-item4130.toggleVisibility,amp-accordion-item5130.hide,amp-accordion-item6130.hide">TEAM PLAYER</h2>
+                    <div class="accordion-item-body" hidden="" id="amp-accordion-item4130">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             Our relationship with the client is as a member of the team. We wear many hats during the relationship and our focus is on the success of the client.</p>
                     </div>
                 </div>
 
                 <div class="accordion-item">
-                    <h2 tabindex="4" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item145.hide,amp-accordion-item245.hide,amp-accordion-item345.hide,amp-accordion-item445.hide,amp-accordion-item545.toggleVisibility,amp-accordion-item645.hide">
+                    <h2 tabindex="4" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item1130.hide,amp-accordion-item2130.hide,amp-accordion-item3130.hide,amp-accordion-item4130.hide,amp-accordion-item5130.toggleVisibility,amp-accordion-item6130.hide">
                         MASTERY</h2>
-                    <div class="accordion-item-body" hidden="" id="amp-accordion-item545">
+                    <div class="accordion-item-body" hidden="" id="amp-accordion-item5130">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             We strive to master our knowledge and develop intuitively. We are constantly researching and learning looking for new ways to apply our skills.</p>
                     </div>
                 </div>
 
                 <div class="accordion-item">
-                    <h2 tabindex="5" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item145.hide,amp-accordion-item245.hide,amp-accordion-item345.hide,amp-accordion-item445.hide,amp-accordion-item545.hide,amp-accordion-item645.toggleVisibility">
+                    <h2 tabindex="5" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item1130.hide,amp-accordion-item2130.hide,amp-accordion-item3130.hide,amp-accordion-item4130.hide,amp-accordion-item5130.hide,amp-accordion-item6130.toggleVisibility">
                         LEADERSHIP</h2>
-                    <div class="accordion-item-body" hidden="" id="amp-accordion-item645">
+                    <div class="accordion-item-body" hidden="" id="amp-accordion-item6130">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             We are constantly looking for the shortest distance to accomplish your goals. Simplicity is the key but it does not mean simplication.</p>
                     </div>
