--- a/contact-serio-design-fx-best-video-social-media.html
+++ b/contact-serio-design-fx-best-video-social-media.html
@@ -97,7 +97,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
                   <a href="index.html#header6-2"></a>
               </amp-img>
           </span>
-          <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html#header6-2">Helping You Grow Sales</a></span>
+          <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html#header6-2">Let Video Get Results</a></span>
       </div>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
@@ -133,7 +133,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
 
 </section>
 
-<amp-animation layout="nodisplay" trigger="visibility" class="cid-qY0HL4x6OJ" id="header7-8" data-rv-view="2668">
+<amp-animation layout="nodisplay" trigger="visibility" class="cid-qY0HL4x6OJ" id="header7-8" data-rv-view="1041">
     <script type="application/json">
     {
         "--width": "calc(0px - width('.animated-text'))",
@@ -170,7 +170,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
 
         <div class="mbr-row mbr-justify-content-center">
             <div class="mbr-col-sm-12 mbr-col-md-10 mbr-col-lg-6" data-form-type="formoid">
-                <form class="mbr-form" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GPwcgoSGDtJ7MZZiXqC4C+QNvqB+fGt5GMU5S3JUeVqLAuMZ8rCeFjTIXNbKi+oaPMVMWGPQvsO8AUOmYN1RjcbObAcYVY0jj6gLNpwWER8anc96SLG3XTsQSaSVp8l+">
+                <form class="mbr-form" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="k5ehq1UWQomfRdfdmmgbXrmJ2IrFWQQT85Al93aZYbjypguYoexuU5/zlFMndUEb5dyIsKDbonLWgSFRmkJJDcP0KVr5FVntksD7P5s7rrtMTAXEDB+ZoV7DeCWqBPyH">
                     <div submit-success="">
                         <template data-form-alert="" type="amp-mustache">Email sent successfully!</template>
                     </div>
