--- a/disclaimer.html
+++ b/disclaimer.html
@@ -96,7 +96,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
                   <a href="index.html#header6-2"></a>
               </amp-img>
           </span>
-          <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html#header6-2">Helping You Grow Sales</a></span>
+          <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html#header6-2">Let Video Get Results</a></span>
       </div>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
