--- a/superior-video-marketing-subscription-service.html
+++ b/superior-video-marketing-subscription-service.html
@@ -98,7 +98,7 @@ media and advertising, social media commercial, social media marketing advertisi
                   <a href="index.html#header6-2"></a>
               </amp-img>
           </span>
-          <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html#header6-2">Helping You Grow Sales</a></span>
+          <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html#header6-2">Let Video Get Results</a></span>
       </div>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
