--- a/Best+Reasons+Why+Ecommerce+Retailers+Need+Exclusive+Video+Marketing+Services.html
+++ b/Best+Reasons+Why+Ecommerce+Retailers+Need+Exclusive+Video+Marketing+Services.html
@@ -73,6 +73,10 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
 }
 </script>
 </amp-analytics>
+<script type="text/javascript">
+  var subscribersSiteId = '45556f13-10aa-4ad3-88c0-aafb4ac4df50';
+</script>
+<script type="text/javascript" src="https://cdn.subscribers.com/assets/subscribers.js"></script>
 <!-- /Google Analytics -->
 
 
@@ -131,7 +135,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
 
 </section>
 
-<amp-animation layout="nodisplay" trigger="visibility" class="cid-r5DO2ch8Af" id="header7-2u" data-rv-view="1588">
+<amp-animation layout="nodisplay" trigger="visibility" class="cid-r5DO2ch8Af" id="header7-2u" data-rv-view="2284">
     <script type="application/json">
     {
         "--width": "calc(0px - width('.animated-text'))",
