--- a/agile-digital-marketing-for-small-business.html
+++ b/agile-digital-marketing-for-small-business.html
@@ -76,6 +76,10 @@ digital marketing techniques, digital marketing objectives. digital marketing ov
 }
 </script>
 </amp-analytics>
+<script type="text/javascript">
+  var subscribersSiteId = '45556f13-10aa-4ad3-88c0-aafb4ac4df50';
+</script>
+<script type="text/javascript" src="https://cdn.subscribers.com/assets/subscribers.js"></script>
 <!-- /Google Analytics -->
 
 
