create github pages

--- a/agile-digital-marketing-for-small-business.html
+++ b/agile-digital-marketing-for-small-business.html
@@ -8,12 +8,12 @@
   <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image:src" content="assets/images/agile-digital-marketing-for-small-business-meta.jpg"/>
 <meta property="og:image" content="assets/images/agile-digital-marketing-for-small-business-meta.jpg"/>
-<meta name="twitter:title" content="SERIO Design FX |  Innovative Agile Digital Marketing Services  "/>
+<meta name="twitter:title" content="Innovative Digital Marketing Services  That Delivers Results"/>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/seriodesignfxlogonewblackbgrd-128x128.png" type="image/x-icon">
   <meta name="description" content="You can stop  struggling to get business from the internet. Smart business owners use these innovative  digital marketing services that provide affordable digital merketing services. Savy business owners are making bold decisions to embrace innovative business models. Major corporations have used this strategy with great success. ">
   
-  <title>SERIO Design FX |  Innovative Agile Digital Marketing Services  </title>
+  <title>Innovative Digital Marketing Services  That Delivers Results</title>
   
 <link rel="canonical" href="https://seriodesignfx.com/agile-digital-marketing-for-small-business.html">
  <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style>
@@ -34,8 +34,8 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
   <script async custom-element="amp-animation" src="https://cdn.ampproject.org/v0/amp-animation-0.1.js"></script>
   <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
   
-  <meta name="keywords" content="digital marketing company, 
-digital marketing company milwaukee, digital marketing company in usa,  digital marketing company us, digital marketing companies chicago, digital marketing services,  agile company, agile marketing  " />
+  <meta name="keywords" content="best marketing campaign, brand building, building a brand, brand building strategies, 
+strategies for brand building, building your brand on social media, brand building social media, digital marketing services,  innovative digital marketing, innovative digital marketing ideas " />
   <script async custom-element="amp-user-notification" src="https://cdn.ampproject.org/v0/amp-user-notification-0.1.js"></script>
   
 </head>
@@ -148,7 +148,7 @@ digital marketing company milwaukee, digital marketing company in usa,  digital 
     <div class="container">
         <h1 class="mbr-section-title mbr-fonts-style align-center mbr-bold mbr-black display-1">Forget everything you knew about digital marketing services.</h1>
         
-        <p class="mbr-fonts-style mbr-text align-center mbr-black display-6">SERIO Design FX produces exclusive video marketing content with short turnaround times, and affordable!<br></p>
+        <p class="mbr-fonts-style mbr-text align-center mbr-black display-6">SERIO Design FX produces exclusive marketing content with short turnaround times, and affordable!<br></p>
 
         <div class="mbr-section-btn align-center"><a class="btn btn-md btn-info display-4" href="contact-serio-design-fx-best-video-social-media.html">
                 CONTACT US NOW</a></div>
