--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
     <div class="container">    
         <h1 class="mbr-section-title mbr-fonts-style align-center mbr-black l-spacing3 display-1">We Solve Your Digital Marketing Problems</h1>
         
-        <p class="mbr-fonts-style mbr-text align-center mbr-black display-5">We help your business grow it's revenue using exclusive video content marketing services.&nbsp;</p>
+        <p class="mbr-fonts-style mbr-text align-center mbr-black display-5">We help your business grow it's revenue using exclusive digital marketing services.&nbsp;</p>
 
         <amp-lightbox id="my-lightboxheader6730" layout="nodisplay">
           <div class="lightbox" on="tap:my-lightboxheader6730.close, video0.hide" role="button" tabindex="0">
@@ -578,7 +578,7 @@ next level. Business owners who have spent years building their business and wan
     </div>
 </section>
 
-<amp-animation layout="nodisplay" trigger="visibility" class="cid-qXUiZmdUy6" id="header7-1" data-rv-view="883">
+<amp-animation layout="nodisplay" trigger="visibility" class="cid-qXUiZmdUy6" id="header7-1" data-rv-view="2583">
     <script type="application/json">
     {
         "--width": "calc(0px - width('.animated-text'))",
