--- a/Best+Reasons+Why+Ecommerce+Retailers+Need+Exclusive+Video+Marketing+Services.html
+++ b/Best+Reasons+Why+Ecommerce+Retailers+Need+Exclusive+Video+Marketing+Services.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="assets/images/seriodesignfxlogonewblackbgrd-128x128.png" type="image/x-icon">
   <meta name="description" content="Do you want to capture the attention of your customers? Top businesses are having us produce  video advertising that grabs attention fast - because there are literally hundreds of other businesses waiting to snag that sale.  We produce exclusive videos that people take notice and want to know more. ">
   
-  <title>Top Reasons Why Business Need Bold Social Media Marketingg | SERIO Design FX</title>
+  <title>Video Content Marketing That Wins Customers | SERIO Design FX</title>
   
 <link rel="canonical" href="https://seriodesignfx.com/Best+Reasons+Why+Ecommerce+Retailers+Need+Exclusive+Video+Marketing+Services.html">
  <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style>
@@ -30,9 +30,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
   <script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
   <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
   
-  <meta name="keywords" content="video ads, video ads facebook, 
-video ads in facebook, video ads on facebook, video ads on linkedin, 
-video ads for instagram, video ads on instagram, video ads on twitter. video ads can run on, video ads for social media" />
+  <meta name="keywords" content="video ads, video ads facebook, video ads in facebook, video ads on facebook, video ads on linkedin, video ads for instagram, video ads on instagram, video ads on twitter. video ads can run on, video ads for social media" />
   <script async custom-element="amp-user-notification" src="https://cdn.ampproject.org/v0/amp-user-notification-0.1.js"></script>
   
 </head>
@@ -138,7 +136,7 @@ video ads for instagram, video ads on instagram, video ads on twitter. video ads
 
 </section>
 
-<amp-animation layout="nodisplay" trigger="visibility" class="cid-r5DO2ch8Af" id="header7-2u" data-rv-view="1116">
+<amp-animation layout="nodisplay" trigger="visibility" class="cid-r5DO2ch8Af" id="header7-2u" data-rv-view="2816">
     <script type="application/json">
     {
         "--width": "calc(0px - width('.animated-text'))",
