--- a/superior-video-marketing-subscription-service.html
+++ b/superior-video-marketing-subscription-service.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="assets/images/seriodesignfxlogonewblackbgrd-128x128.png" type="image/x-icon">
   <meta name="description" content="Video Content or Bust - The need for brands to produce video is greater than ever. We create a powerful online presence for your business using video on multiple social media channels.  You can leverage  powerful video advertising  by using this  subscription service. Your business standout from the crowd  because you will have an outstanding brand signal on social media.">
   
-  <title>You Will Profit Using This Social Media Marketing Service | SERIO Design FX</title>
+  <title>Does Your Social Media Management Include This? | SERIO Design FX</title>
   
 <link rel="canonical" href="https://seriodesignfx.com/superior-video-marketing-subscription-service.html">
  <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style>
@@ -29,7 +29,8 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
   <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
   <script async custom-element="amp-youtube" src="https://cdn.ampproject.org/v0/amp-youtube-0.1.js"></script>
   
-  <meta name="keywords" content="social media agency, social media marketing, social media marketing agency pricing, social media marketing service,  video marketing agency,  " />
+  <meta name="keywords" content="social media marketing
+social media marketing strategy, social media as marketing strategy, tips for social media marketing, social media marketing plan,  why social media marketing is important, how much does social media marketing cost, is social media marketing worth it " />
   <script async custom-element="amp-user-notification" src="https://cdn.ampproject.org/v0/amp-user-notification-0.1.js"></script>
   
 </head>
